--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <p>Equipo 4 Prograyankies</p>
-    
+    <p>Vamos a realizar una landing page de 5 paginas</p>
 </body>
 </html>
