--- a/about.html
+++ b/about.html
@@ -1,14 +1,52 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sobre nosotros</title>
+    <meta name="description" content="Página sobre EcoLoop, un equipo dedicado a la recolección sostenible de residuos.">
+    <title>Sobre Nosotros | EcoLoop</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
+
 <body>
-    <p>esta es una pagina sobre nosotros
-        <br>
-        somos el equipo 4 y es el programador Javier
-    </p>
+    <!-- Encabezado y navegación -->
+    <header>
+        <h1>Sobre Nosotros</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="servicios.html">Servicios</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <!-- Contenido principal -->
+    <main>
+        <section>
+            <article>
+                <h2>Quiénes Somos</h2>
+                <p>Somos el equipo EcoLoop, un grupo comprometido con la sostenibilidad y la recolección eficiente de residuos. 
+                    Nuestro objetivo es mejorar la gestión de residuos en las comunidades a través de la innovación y la colaboración con los ciudadanos.</p>
+            </article>
+
+            <article>
+                <h2>Nuestro Programador</h2>
+                <p>El programador principal de EcoLoop es Javier, un joven con gran pasión por la tecnología y la sostenibilidad. Javier ha diseñado y desarrollado nuestras plataformas, ayudando a optimizar los procesos de recolección y gestionando la innovación en cada paso.</p>
+            </article>
+        </section>
+
+        <section>
+            <h2>¿Por Qué Elegirnos?</h2>
+            <p>EcoLoop es la opción ideal para quienes buscan una forma más eficiente y responsable de gestionar los residuos. Nuestro equipo se enfoca en la innovación, la sostenibilidad y el compromiso con la comunidad.</p>
+        </section>
+    </main>
+
+    <!-- Pie de página -->
+    <footer>
+        <p>&copy; 2024 EcoLoop | <a href="politica-privacidad.html">Política de privacidad</a></p>
+    </footer>
 </body>
+
 </html>
